[package]
name = "cursive-flexbox"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Frans <franske2000 [at] gmail [dot] com>"]
description = "Correct flexbox implementation for cursive"
license = "MIT"
repository = "https://github.com/ThomasFrans/cursive-flexbox"

[dependencies]
# Core cursive functionality needed to implement new cursive libraries.
cursive_core = "0.3.7"
