[package]
name = "cursive-flexbox"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Frans"]
description = "Flexbox view for Cursive"
readme = "README.md"
repository = "https://github.com/ThomasFrans/cursive-flexbox"
license = "MIT"
keywords = ["tui", "flexbox", "cursive"]
categories = ["command-line-interface"]
exclude = ["/.github", "/TODO.md", "/docs/status.md"]

[dependencies]
# Core cursive functionality needed to implement new cursive libraries.
cursive_core = "0.3.7"

[dev-dependencies]
cursive = "0.20.0"
