[package]
name = "cursive-flexbox"
version = "0.3.0"
edition = "2021"
authors = ["Thomas Frans <franske2000@gmail.com>"]
description = "Flexbox view for Cursive"
readme = "README.md"
repository = "https://github.com/ThomasFrans/cursive-flexbox"
license = "MIT"
keywords = ["tui", "flexbox", "cursive", "layout"]
categories = ["command-line-interface"]
exclude = ["/.github"]

[dependencies]
# Core cursive functionality needed to implement new cursive libraries.
cursive_core = "0.3.7"

[dev-dependencies]
cursive = "0.20.0"
crossbeam = "0.8.2"
insta = "1.28.0"
